nullaway_error_80b472ab-4d60-4207-9177-9ab5b597ce5f.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/ServerRequestAuthFilter.java:63: error: [NullAway] dereferenced expression serverConfig is @Nullable
        if (serverConfig.shouldLogIdentityHeaders()) {
                        ^
